kubernetes/apps/monitoring/victoria-logs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - victoria-logs.${HOMELAB_DOMAIN}
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-logs-server
          port: 9428
